Fixed webfonts issue
Changed links in HTML and CSS,
and added selectors for H1 and H2.
Tested & works.

Responds to & closes issue #1.

--- a/hourofcode.html
+++ b/hourofcode.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>2017 Hour of Code -- Contra Costa College</title>
     <link href="hourofcode.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
 
   </head>
   <body>
