updates to html and css

--- a/hourofcode.html
+++ b/hourofcode.html
@@ -9,8 +9,21 @@
   </head>
   <body>
 
-    <H1>2017 Hour of Code -- Contra Costa College</H1>
+    <H1 id = "title">2017 Hour of Code -- Contra Costa College</H1>
     <h2>December 9, 2017</h2>
+
+
+    <div class = "classy-text">
+      <p>Some text here<br>
+      And a link <a href ="http://Google.com">Google</a><br></p>
+    </div>
+
+<p>And a fun image</p>
+
+    <img src = "https://www.rockarchive.com/media/1890/david-bowie-db001duffy.jpg?crop=0.19186424300418511,0.18786141133986681,0.20427102269629802,0.20827385436061632&cropmode=percentage&width=800&height=800&rnd=131363362360000000&overlay=watermark.png&overlay.size=230,20&overlay.position=0,780">
+
+
+
 
   </body>
 </html>
