adding comments to html

--- a/hourofcode.html
+++ b/hourofcode.html
@@ -1,12 +1,34 @@
+<!-- Hi! This is an HTML file we worked on at the Hour of Code event at Contra Costa College on December
+9, 2017. I have made COMMENTS above each tag to explain them! -->
+
+<!-- The DOCTYPE tells your browser what kind of file it's looking at. In this case, it's saying the
+document type is HTML -->
+
+
 <!DOCTYPE html>
+
+<!-- Every HTML documents have nested tags that look like <this>. Pretty much every tag has an opening
+  tag and a closing tag that looks like </this>.  Below is the opening <html> tag. Can you find
+  the closing </html> tag?  -->
+
 <html>
+
+<!-- Information about a web page is contained in the <head> element. Typically it's not shown
+  to the user in the browser. It does contain important stuff, though, like links
+  to our nifty web fonts and our CSS stylesheet. -->
+
   <head>
     <meta charset="utf-8">
     <title>2017 Hour of Code -- Contra Costa College</title>
+
+    <!-- This link is to our CSS stylesheet.  -->
     <link href="hourofcode.css" rel="stylesheet" type="text/css">
+    <!-- This link is to our nifty webfont.  -->
     <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
 
   </head>
+
+  <!-- Now we have the body! This is the stuff that a user actually sees in the browser.  -->
   <body>
 
     <H1 id = "title">2017 Hour of Code -- Contra Costa College</H1>
@@ -17,6 +39,8 @@
       <p>Some text here<br>
       And a link <a href ="http://Google.com">Google</a><br></p>
     </div>
+
+    <p id="title">first section</p>
 
 <p>And a fun image</p>
 
